fix spark and the whole inference